variables.RunFour.scala.error
Erreur de compilation :
RunFour:2: error: Missing closing brace `}' assumed here
var dejaFait: Int=0;
^